DRAFT - Generate workflow from json file

--- a/web/browser-app/package.json
+++ b/web/browser-app/package.json
@@ -25,9 +25,9 @@
     "coffee-workflow-analyzer-editors": "0.0.0",
     "coffee-workspace-filesystem-storage-service": "0.0.0",
     "coffee-java-extension": "0.0.0",
-    "glsp-theia-extension":"0.1.0",
-    "workflow-glsp-extension": "0.0.0"
-
+    "glsp-theia-extension": "0.1.0",
+    "workflow-glsp-extension": "0.0.0",
+    "coffee-workflow-generator": "0.0.0"
   },
   "devDependencies": {
     "@theia/cli": "latest"
